Fix bootRun arguments for Dozer mapping (which needs java.xml.bind)